Implement signup/login/logout functionality and session management. Add archive classes and relationships. Fix logic issues.